OSHB-238: Tablet: Alignment issues in the homepage

--- a/static/custom/modules/vertical/home/home.scss
+++ b/static/custom/modules/vertical/home/home.scss
@@ -40,6 +40,17 @@
   }
 }
 
+@media only screen 
+and (min-width : 768px) 
+and (max-width : 950px){
+  .home{
+    .btn--block-full{
+      .btn-default{
+        min-height:7.2rem;
+      }
+    }
+  }
+}
 
 @media only screen 
 and (min-width : 768px) 
